Alignment issue fixed.

--- a/Hygieia_UI/UI/src/app/css/detailedView.less
+++ b/Hygieia_UI/UI/src/app/css/detailedView.less
@@ -95,7 +95,7 @@
             			font-weight:400;
             			color:#000;
                         text-align: -webkit-center;
-                        padding-top: 10%;
+                        padding-top: 5%;
             		}
             .widget-value-pro-small{
                         font-size:15px;
